--- a/util/grub.d/00_header.in
+++ b/util/grub.d/00_header.in
@@ -22,6 +22,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
 grub_prefix=`echo /boot/grub | sed ${transform}`
+locale_prefix="/usr/share/locale" # TODO: dynamic with exec_prefix ?
 
 . ${libdir}/grub/grub-mkconfig_lib
 
@@ -99,6 +100,21 @@ fi
 EOF
   ;;
 esac
+
+if test -e ${grub_prefix}/gettext.mod -a -d /usr/share/locale; then
+  # Make the locales accesible
+  prepare_grub_to_access_device `${grub_probe} --target=device ${locale_prefix}`
+  lang=`get_locale_lang`
+  grub_locale_prefix=`make_system_path_relative_to_its_root ${locale_prefix}`
+  cat << EOF
+# Gettext variables and module
+set locale_prefix=${grub_locale_prefix}
+set lang=${lang}
+insmod gettext 
+EOF
+else
+  echo "gettext module or /usr/share/locale is not available"
+fi
 
 if [ "x${GRUB_HIDDEN_TIMEOUT}" != "x" ] ; then
   if [ "x${GRUB_HIDDEN_TIMEOUT_QUIET}" = "xtrue" ] ; then 
