--- a/util/i386/pc/grub-mkfloppy.in
+++ b/util/i386/pc/grub-mkfloppy.in
@@ -1,7 +1,7 @@
 #! /bin/sh -e
 
-# Make GRUB rescue image
-# Copyright (C) 1999,2000,2001,2002,2003,2004,2005,2006,2007,2008,2009  Free Software Foundation, Inc.
+# Make GRUB rescue floppy
+# Copyright (C) 1999,2000,2001,2002,2003,2004,2005,2006,2007,2008  Free Software Foundation, Inc.
 #
 # GRUB is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -30,26 +30,19 @@ target_cpu=@target_cpu@
 platform=@platform@
 pkglibdir=${libdir}/`echo ${PACKAGE_TARNAME}/${target_cpu}-${platform} | sed ${transform}`
 
-grub_mkimage=${bindir}/`echo grub-mkelfimage | sed ${transform}`
-grub_mkisofs=${bindir}/`echo grub-mkisofs | sed ${transform}`
-
 # Usage: usage
 # Print the usage.
 usage () {
     cat <<EOF
 Usage: $0 [OPTION] output_image
-Make GRUB rescue image.
+Make GRUB rescue floppy.
 
   -h, --help              print this message and exit
   -v, --version           print the version information and exit
   --modules=MODULES       pre-load specified modules MODULES
-  --overlay=DIR           overlay directory DIR in the memdisk image
-                          (may be specified multiple times)
-  --pkglibdir=DIR         use images from directory DIR instead of ${pkglibdir}
-  --grub-mkimage=FILE     use FILE as grub-mkimage
-  --grub-mkisofs=FILE     use FILE as grub-mkisofs
+  --output=FILE           save output in FILE
 
-$0 generates a bootable rescue image.
+$0 generates a bootable rescue floppy.
 
 Report bugs to <bug-grub@gnu.org>.
 EOF
@@ -68,14 +61,8 @@ for option in "$@"; do
 	exit 0 ;;
     --modules=*)
 	modules=`echo "$option" | sed 's/--modules=//'` ;;
-    --overlay=*)
-	overlay=${overlay}${overlay:+ }`echo "$option" | sed 's/--overlay=//'` ;;
-    --pkglibdir=*)
-	input_dir=`echo "$option" | sed 's/--pkglibdir=//'` ;;
-    --grub-mkimage=*)
-	grub_mkimage=`echo "$option" | sed 's/--grub-mkimage=//'` ;;
-    --grub-mkisofs=*)
-	grub_mkisofs=`echo "$option" | sed 's/--grub-mkisofs=//'` ;;
+    --output=*)
+	output_image=`echo "$option" | sed 's/--output=//'` ;;
     -*)
 	echo "Unrecognized option \`$option'" 1>&2
 	usage
@@ -96,53 +83,34 @@ if test "x$output_image" = x; then
   exit 1
 fi
 
-memdisk_dir=`mktemp -d`
-iso9660_dir=`mktemp -d`
-mkdir -p ${memdisk_dir}/boot/grub ${iso9660_dir}/boot/grub
+aux_dir=`mktemp -d`
+mkdir -p ${aux_dir}/boot/grub
 
 for file in ${input_dir}/*.mod ${input_dir}/efiemu??.o \
   ${input_dir}/command.lst ${input_dir}/moddep.lst ${input_dir}/fs.lst \
   ${input_dir}/handler.lst ${input_dir}/parttool.lst; do
   if test -f "$file"; then
-    cp -f "$file" ${iso9660_dir}/boot/grub/
+    cp -f "$file" ${aux_dir}/boot/grub/
   fi
 done
 
-# obtain date-based UUID
-iso_uuid=$(date +%Y-%m-%d-%H-%M-%S-00)
-
-# first-stage grub.cfg
-cat << EOF >> ${memdisk_dir}/boot/grub/grub.cfg
-search --fs-uuid --set ${iso_uuid}
-set prefix=(\${root})/boot/grub
-source /boot/grub/grub.cfg
-EOF
+modules="$(cat ${input_dir}/partmap.lst) ${modules}"
+for i in ${modules} ; do
+  echo "insmod $i"
+done > ${aux_dir}/boot/grub/grub.cfg
 
 # build memdisk
 memdisk_img=`mktemp`
-tar -C ${memdisk_dir} -cf ${memdisk_img} boot
-rm -rf ${memdisk_dir}
+tar -C ${aux_dir} -cf ${memdisk_img} boot
+rm -rf ${aux_dir}
 
 # build core.img
-mkdir -p ${iso9660_dir}/boot/grub
-${grub_mkimage} -d ${input_dir}/ -m ${memdisk_img} -o ${iso9660_dir}/boot/multiboot.img \
-  at_keyboard memdisk tar ata search iso9660 configfile sh
+core_img=`mktemp`
+grub-mkimage -d ${input_dir}/ -m ${memdisk_img} -o ${core_img} memdisk tar biosdisk
 rm -f ${memdisk_img}
 
-for d in ${overlay}; do
-  echo "Overlaying $d"
-  cp -dpR "${d}"/* "${iso9660_dir}"/
-done
-
-# second-stage grub.cfg
-modules="`cat ${input_dir}/partmap.lst` ${modules}"
-for i in ${modules} ; do
-  echo "insmod $i"
-done > ${iso9660_dir}/boot/grub/grub.cfg
-
-# build iso image
-${grub_mkisofs} \
-  --modification-date=$(echo ${iso_uuid} | sed -e s/-//g) \
-  -o ${output_image} -r -J ${iso9660_dir}
+# build floppy image
+cat ${input_dir}/boot.img ${core_img} /dev/zero | dd bs=1024 count=1440 > ${output_image}
+rm -f ${core_img}
 
 exit 0
