* conf/common.rmk (grub_mkisofs_CFLAGS): Move `-I$(srcdir)/gnulib'         from here ...         * Makefile.in (CPPFLAGS): ... to here.

--- a/Makefile.in
+++ b/Makefile.in
@@ -71,7 +71,7 @@ CC = @CC@
 CFLAGS = @CFLAGS@
 ASFLAGS = @ASFLAGS@
 LDFLAGS = @LDFLAGS@
-CPPFLAGS = @CPPFLAGS@ -I$(builddir) -I$(builddir)/include -I$(srcdir)/include -Wall -W \
+CPPFLAGS = @CPPFLAGS@ -I$(builddir) -I$(builddir)/include -I$(srcdir)/gnulib -I$(srcdir)/include -Wall -W \
 	 -DGRUB_LIBDIR=\"$(pkglibdir)\"
 TARGET_CC = @TARGET_CC@
 TARGET_CFLAGS = @TARGET_CFLAGS@
