Use proper path for gettext.sh and export TEXTDOMAINDIR.

--- a/util/grub.d/10_linux.in
+++ b/util/grub.d/10_linux.in
@@ -18,11 +18,13 @@
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
+bindir=@bindir@
 libdir=@libdir@
 . ${libdir}/grub/grub-mkconfig_lib
 
-. /usr/bin/gettext.sh
+. ${bindir}/gettext.sh
 export TEXTDOMAIN=@PACKAGE@
+export TEXTDOMAINDIR=@LOCALEDIR@
 
 if [ "x${GRUB_DISTRIBUTOR}" = "x" ] ; then
   OS=GNU/Linux
