2009-11-18  Robert Millan  <rmh.grub@aybabtu.com>
        * Makefile.in ($(srcdir)/aclocal.m4): New target.

--- a/Makefile.in
+++ b/Makefile.in
@@ -445,6 +445,9 @@ check:
 .SUFFIX: .c .o .S .d
 
 # Regenerate configure and Makefile automatically.
+$(srcdir)/aclocal.m4: configure.ac acinclude.m4
+	cd $(srcdir) && aclocal
+
 $(srcdir)/configure: configure.ac aclocal.m4
 	cd $(srcdir) && autoconf
 
