2009-11-19  Robert Millan  <rmh.grub@aybabtu.com>
        * conf/i386-pc.rmk (grub_setup_SOURCES): Add `gnulib/progname.c'.
        * util/i386/pc/grub-setup.c: Include `<grub/i18n.h>'.
        Include `"progname.h"'.
        (main): Initialize gettext.
        * util/i386/pc/grub-setup.c: Gettexttize.
        * util/i386/pc/grub-mkimage.c: Likewise.

        * Makefile.in (po/*.po): Redefine as ...
        ($(foreach lang, $(LINGUAS), po/$(lang).po)): ... this.

        * po/POTFILES: Add `util/i386/pc/grub-setup.c'.

--- a/Makefile.in
+++ b/Makefile.in
@@ -476,7 +476,7 @@ po/$(PACKAGE).pot: po/POTFILES po/POTFILES-shell
 	$(XGETTEXT) --from-code=utf-8 -o $@ -f $< --keyword=_
 	$(XGETTEXT) --from-code=utf-8 -o $@ -f po/POTFILES-shell -j --language=Shell
 
-po/*.po: po/$(PACKAGE).pot
+$(foreach lang, $(LINGUAS), po/$(lang).po): po/$(PACKAGE).pot
 	$(MSGMERGE) -U $@ po/$(PACKAGE).pot
 
 po/%.mo: po/%.po
