--- a/Makefile.in
+++ b/Makefile.in
@@ -472,12 +472,12 @@ gensymlist.sh: gensymlist.sh.in config.status
 genkernsyms.sh: genkernsyms.sh.in config.status
 	$(SHELL) ./config.status
 
-po/$(PACKAGE).pot: po/POTFILES po/POTFILES-shell
-	$(XGETTEXT) --from-code=utf-8 -o $@ -f $< --keyword=_
-	$(XGETTEXT) --from-code=utf-8 -o $@ -f po/POTFILES-shell -j --language=Shell
+$(srcdir)/po/$(PACKAGE).pot: po/POTFILES po/POTFILES-shell
+	cd $(srcdir) && $(XGETTEXT) --from-code=utf-8 -o $@ -f $< --keyword=_
+	cd $(srcdir) && $(XGETTEXT) --from-code=utf-8 -o $@ -f po/POTFILES-shell -j --language=Shell
 
-$(foreach lang, $(LINGUAS), po/$(lang).po): po/$(PACKAGE).pot
-	$(MSGMERGE) -U $@ po/$(PACKAGE).pot
+$(foreach lang, $(LINGUAS), $(srcdir)/po/$(lang).po): po/$(PACKAGE).pot
+	$(MSGMERGE) -U $@ $^
 
 po/%.mo: po/%.po
 	$(MKDIR_P) $$(dirname $@)
