2009-11-21  Felix Zielcke  <fzielcke@z-51.de>
	* Makefile.in (target): Use make's builtin $(shell) function
	instead of calling directly $(SHELL) to create the locale directories,
	inside the $(foreach) function.

--- a/Makefile.in
+++ b/Makefile.in
@@ -309,7 +309,7 @@ install-local: all
 	  $(INSTALL_DATA) $$dir$$file $(DESTDIR)$(libdir)/grub/$$dest; \
 	done
 	$(foreach lang, $(LINGUAS), \
-	$(SHELL) $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$(lang)/LC_MESSAGES \
+	$(shell $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$(lang)/LC_MESSAGES) \
 	@list='po/$(lang).mo'; \
 	for file in $$list; do \
 	  if test -f "$$file"; then dir=; else dir="$(srcdir)/"; fi; \
