--- a/util/grub.d/00_header.in
+++ b/util/grub.d/00_header.in
@@ -103,11 +103,13 @@ EOF
 esac
 
 # Gettext variables and module
-cat << EOF
+if [ "x${LANG}" != "xC" ] ; then
+  cat << EOF
 set locale_dir=${locale_dir}
 set lang=${grub_lang}
 insmod gettext 
 EOF
+fi
 
 if [ "x${GRUB_HIDDEN_TIMEOUT}" != "x" ] ; then
   if [ "x${GRUB_HIDDEN_TIMEOUT_QUIET}" = "xtrue" ] ; then 
