Add auto-generated gcrypt files.
[git importer: converted .bzrignore to .gitignore]

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ config.log
 config.status
 configure
 conf/*.mk
+conf/gcry.rmk
 *.d
 DISTLIST
 docs/*.info
@@ -43,6 +44,7 @@ grub_setup_init.h
 *.img
 include/grub/cpu
 include/grub/machine
+lib/libgcrypt-grub
 *.lst
 Makefile
 *.mod
