--- a/Makefile.in
+++ b/Makefile.in
@@ -312,11 +312,11 @@ install-local: all
 	done
 	@langs='$(LINGUAS)'; \
 	for lang in $$langs; do \
-	  $(SHELL) $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$(lang)/LC_MESSAGES \
-	  list='po/$(liang).mo'; \
+	  $(SHELL) $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES \
+	  list='po/$$lang.mo'; \
 	  for file in $$list; do \
 	    if test -f "$$file"; then dir=; else dir="$(srcdir)/"; fi; \
-	    $(INSTALL_DATA) $$dir$$file $(DESTDIR)/$(datadir)/locale/$(lang)/LC_MESSAGES/$(PACKAGE).mo; \
+	    $(INSTALL_DATA) $$dir$$file $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES/$(PACKAGE).mo; \
 	  done \
 	done
 	$(SHELL) $(mkinstalldirs) $(DESTDIR)$(infodir)
