2009-11-24  Robert Millan  <rmh.grub@aybabtu.com>
        * autogen.sh: Add automake call.
        * config.guess: Remove.
        * config.sub: Likewise.
        * install-sh: Likewise.

[git importer: converted .bzrignore to .gitignore]

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@ aclocal.m4
 autom4te.cache
 build_env.mk
 config.cache
+config.guess
 config.h
 config.h.in
 config.log
 config.status
+config.sub
 configure
 conf/*.mk
 conf/gcry.rmk
@@ -44,11 +46,13 @@ grub_setup_init.h
 *.img
 include/grub/cpu
 include/grub/machine
+install-sh
 lib/libgcrypt-grub
 *.lst
 Makefile
 *.mod
 mod-*.c
+missing
 *.pf2
 po/*.mo
 po/grub.pot
