--- a/Makefile.in
+++ b/Makefile.in
@@ -312,12 +312,10 @@ install-local: all
 	done
 	@langs='$(LINGUAS)'; \
 	for lang in $$langs; do \
-	  $(SHELL) $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES \
-	  list='po/$$lang.mo'; \
-	  for file in $$list; do \
-	    if test -f "$$file"; then dir=; else dir="$(srcdir)/"; fi; \
-	    $(INSTALL_DATA) $$dir$$file $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES/$(PACKAGE).mo; \
-	  done \
+	  $(SHELL) $(mkinstalldirs) $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES; \
+	  file="po/$$lang.mo"; \
+	  if test -f "$$file"; then dir=; else dir="$(srcdir)/"; fi; \
+	  $(INSTALL_DATA) $$dir$$file $(DESTDIR)/$(datadir)/locale/$$lang/LC_MESSAGES/$(PACKAGE).mo; \
 	done
 	$(SHELL) $(mkinstalldirs) $(DESTDIR)$(infodir)
 	@list='$(info_INFOS)'; \
