* .bzrignore: Add gentrigtables, grub-script-check, grub_script_check_init.c, grub_script_check_init.h, and trigtables.c.
[git importer: converted .bzrignore to .gitignore]

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ docs/version.texi
 *.exec
 genkernsyms.sh
 gensymlist.sh
+gentrigtables
 grub-dumpbios
 grub-editenv
 grub-emu
@@ -39,6 +40,9 @@ grub-pe2elf
 grub-probe
 grub_probe_init.c
 grub_probe_init.h
+grub-script-check
+grub_script_check_init.c
+grub_script_check_init.h
 grub_script.tab.c
 grub_script.tab.h
 grub-setup
@@ -61,6 +65,7 @@ stamp-h
 stamp-h1
 stamp-h.in
 symlist.c
+trigtables.c
 update-grub_lib
 *.a
 *.o
