--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ genkernsyms.sh
 gensymlist.sh
 gentrigtables
 grub-bin2h
+grub-bios-setup
 grub_cmd_echo
 grub_cmd_regexp
 grub-editenv
@@ -48,6 +49,7 @@ grub-macho2img
 grub-menulst2cfg
 grub-mk*
 grub-mount
+grub-ofpathname
 grub-pe2elf
 grub-probe
 grub_probe_init.c
@@ -85,6 +87,7 @@ grub_setup_init.c
 grub_setup_init.h
 grub-shell
 grub-shell-tester
+grub-sparc64-setup
 *.img
 *.image
 include/grub/cpu
