--- a/.gitignore
+++ b/.gitignore
@@ -128,10 +128,10 @@ depcomp
 mdate-sh
 texinfo.tex
 grub-core/lib/libgcrypt-grub
-**/.deps
-**/.deps-util
-**/.deps-core
-**/.dirstamp
+.deps
+.deps-util
+.deps-core
+.dirstamp
 Makefile.util.am
 contrib
 grub-core/Makefile.core.am
@@ -172,3 +172,13 @@ Makefile.utilgcry.def
 po/*.po
 po/*.gmo
 po/LINGUAS
+*.a
+*.o
+*.py[co]
+*.so
+*.sw[nop]
+*~
+.#*
+[#]*#
+__pycache__
+bzr-orphans
