Remove autogenerated files from VCS [git importer: converted .bzrignore to .gitignore]

--- a/.gitignore
+++ b/.gitignore
@@ -171,6 +171,8 @@ Makefile.utilgcry.def
 po/*.po
 po/*.gmo
 po/LINGUAS
+include/grub/gcrypt/gcrypt.h
+include/grub/gcrypt/g10lib.h
 *.a
 *.o
 *.py[co]
