Implement USBDebug (full USB stack variant).

--- a/grub-core/Makefile.core.def
+++ b/grub-core/Makefile.core.def
@@ -448,6 +448,12 @@ module = {
 };
 
 module = {
+  name = usbserial_usbdebug;
+  common = bus/usb/serial/usbdebug_late.c;
+  enable = usb;
+};
+
+module = {
   name = uhci;
   common = bus/usb/uhci.c;
   enable = x86;
