--- a/config.h.in
+++ b/config.h.in
@@ -8,6 +8,7 @@
 
 /* Define to 1 to enable disk cache statistics.  */
 #define DISK_CACHE_STATS @DISK_CACHE_STATS@
+#define BOOT_TIME_STATS @BOOT_TIME_STATS@
 
 #if defined (GRUB_UTIL) || !defined (GRUB_MACHINE)
 #include <config-util.h>
